--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "id": "91c8d028-529f-43fc-8cec-fbd818596c86",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
       " 'PostCode': 'CT19 6BL',\n",
       " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda44d3cbb4e722d2b22e9'),\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
       " 'PostCode': 'BN21 1BU',\n",
       " 'RatingDate': '2021-09-23T00:00:00',\n",
       " 'RatingKey': 'fhrs_0_en-gb',\n",
-      " 'RatingValue': '0',\n",
+      " 'RatingValue': 0,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda44e3cbb4e722d2b3e1b'),\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
@@ -597,17 +597,17 @@
        "8  environmental.health@sevenoaks.gov.uk   \n",
        "9                    ehs@basildon.gov.uk   \n",
        "\n",
-       "                                              scores SchemeType  \\\n",
-       "0  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...       FHRS   \n",
-       "1  {'Hygiene': 20, 'Structural': 15, 'ConfidenceI...       FHRS   \n",
-       "2  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...       FHRS   \n",
-       "3  {'Hygiene': 20, 'Structural': 10, 'ConfidenceI...       FHRS   \n",
-       "4  {'Hygiene': 20, 'Structural': 10, 'ConfidenceI...       FHRS   \n",
-       "5  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...       FHRS   \n",
-       "6  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...       FHRS   \n",
-       "7  {'Hygiene': 20, 'Structural': 15, 'ConfidenceI...       FHRS   \n",
-       "8  {'Hygiene': 20, 'Structural': 5, 'ConfidenceIn...       FHRS   \n",
-       "9  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...       FHRS   \n",
+       "                                              scores  SchemeType  \\\n",
+       "0  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...        FHRS   \n",
+       "1  {'Hygiene': 20, 'Structural': 15, 'ConfidenceI...        FHRS   \n",
+       "2  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...        FHRS   \n",
+       "3  {'Hygiene': 20, 'Structural': 10, 'ConfidenceI...        FHRS   \n",
+       "4  {'Hygiene': 20, 'Structural': 10, 'ConfidenceI...        FHRS   \n",
+       "5  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...        FHRS   \n",
+       "6  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...        FHRS   \n",
+       "7  {'Hygiene': 20, 'Structural': 15, 'ConfidenceI...        FHRS   \n",
+       "8  {'Hygiene': 20, 'Structural': 5, 'ConfidenceIn...        FHRS   \n",
+       "9  {'Hygiene': 20, 'Structural': 20, 'ConfidenceI...        FHRS   \n",
        "\n",
        "                                             geocode RightToReply  \\\n",
        "0      {'longitude': 0.27694, 'latitude': 50.769705}                \n",
@@ -660,7 +660,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "id": "54c93367-ef0b-49ed-8d1e-257bd3146219",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
       " 'PostCode': 'ME12',\n",
       " 'RatingDate': '2021-10-18T00:00:00',\n",
       " 'RatingKey': 'fhrs_4_en-gb',\n",
-      " 'RatingValue': '4',\n",
+      " 'RatingValue': 4,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda44e3cbb4e722d2b583b'),\n",
@@ -758,7 +758,7 @@
    ],
    "source": [
     "# Find the establishments with London as the Local Authority and has a RatingValue greater than or equal to 4.\n",
-    "query = {\"LocalAuthorityName\":{'$regex': \"London\"}, \"RatingValue\" : {'$gte':'4'}}\n",
+    "query = {\"LocalAuthorityName\":{'$regex': \"London\"}, \"RatingValue\" : {'$gte':4}}\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
     "count = establishments.count_documents(query)\n",
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "id": "07e24ccb",
    "metadata": {},
    "outputs": [
@@ -1160,17 +1160,17 @@
        "8  publicprotection@cityoflondon.gov.uk   \n",
        "9  publicprotection@cityoflondon.gov.uk   \n",
        "\n",
-       "                                              scores SchemeType  \\\n",
-       "0  {'Hygiene': 5, 'Structural': 10, 'ConfidenceIn...       FHRS   \n",
-       "1  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-       "2  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "3  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-       "4  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "5  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "6  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-       "7  {'Hygiene': 10, 'Structural': 5, 'ConfidenceIn...       FHRS   \n",
-       "8  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "9  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
+       "                                              scores  SchemeType  \\\n",
+       "0  {'Hygiene': 5, 'Structural': 10, 'ConfidenceIn...        FHRS   \n",
+       "1  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "2  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "3  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "4  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "5  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "6  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "7  {'Hygiene': 10, 'Structural': 5, 'ConfidenceIn...        FHRS   \n",
+       "8  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "9  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
        "\n",
        "                                             geocode RightToReply  \\\n",
        "0     {'longitude': 0.508551, 'latitude': 51.369321}                \n",
@@ -1223,7 +1223,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
       " 'PostCode': 'SE18 1PR',\n",
       " 'RatingDate': '2021-06-16T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b9694'),\n",
@@ -1335,7 +1335,7 @@
       " 'PostCode': '',\n",
       " 'RatingDate': '2020-07-09T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b96dd'),\n",
@@ -1371,7 +1371,7 @@
       " 'PostCode': 'SE18 1SE',\n",
       " 'RatingDate': '2021-11-11T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b965d'),\n",
@@ -1407,7 +1407,7 @@
       " 'PostCode': 'SE18 1PP',\n",
       " 'RatingDate': '2020-10-20T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b9697'),\n",
@@ -1443,7 +1443,7 @@
       " 'PostCode': 'SE18 1PP',\n",
       " 'RatingDate': '2020-10-20T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b96b4'),\n",
@@ -1479,7 +1479,7 @@
       " 'PostCode': 'SE18 1PP',\n",
       " 'RatingDate': '2021-08-23T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b96de'),\n",
@@ -1515,7 +1515,7 @@
       " 'PostCode': 'SE18 1QG',\n",
       " 'RatingDate': '2021-06-16T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b9692'),\n",
@@ -1551,7 +1551,7 @@
       " 'PostCode': 'SE18 1JQ',\n",
       " 'RatingDate': '2019-11-13T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b964d'),\n",
@@ -1587,7 +1587,7 @@
       " 'PostCode': 'SE18 1JQ',\n",
       " 'RatingDate': '2019-08-05T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b967b'),\n",
@@ -1623,7 +1623,7 @@
       " 'PostCode': 'SE18 1PP',\n",
       " 'RatingDate': '2021-06-23T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66bda4503cbb4e722d2b96b2'),\n",
@@ -1651,7 +1651,7 @@
     "latitude = 51.490142\n",
     "longitude = 0.08384\n",
     "\n",
-    "query = {'RatingValue': '5', \n",
+    "query = {'RatingValue': 5, \n",
     "         'geocode.latitude': {'$lte': (latitude + degree_search), '$gte': (latitude - degree_search)}, \n",
     "         'geocode.longitude': {'$lte': (longitude + degree_search), '$gte': (longitude - degree_search)} \n",
     "         }\n",
@@ -1664,10 +1664,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows in DataFrame:  5\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1881,12 +1888,12 @@
        "3  health@royalgreenwich.gov.uk   \n",
        "4  health@royalgreenwich.gov.uk   \n",
        "\n",
-       "                                              scores SchemeType  \\\n",
-       "0  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "1  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "2  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
-       "3  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...       FHRS   \n",
-       "4  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...       FHRS   \n",
+       "                                              scores  SchemeType  \\\n",
+       "0  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "1  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "2  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
+       "3  {'Hygiene': 0, 'Structural': 5, 'ConfidenceInM...        FHRS   \n",
+       "4  {'Hygiene': 0, 'Structural': 0, 'ConfidenceInM...        FHRS   \n",
        "\n",
        "                                             geocode RightToReply  \\\n",
        "0  {'longitude': 0.0925370007753372, 'latitude': ...                \n",
@@ -1919,7 +1926,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "id": "4eeb227e",
    "metadata": {},
    "outputs": [
@@ -2000,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "d8aab364",
    "metadata": {},
    "outputs": [
@@ -2105,7 +2112,7 @@
        "9         Tendring    542"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
