--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'The Coastguard Inn',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 1034540,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('66bda44d3cbb4e722d2b2002'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      " '_id': ObjectId('66bda44d3cbb4e722d2b22e9'),\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -219,17 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('66be8978706c7abb07729a0d'), acknowledged=True)"
+       "InsertOneResult(ObjectId('66c51e5a2aa686eb645529ad'), acknowledged=True)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
       " 'AddressLine4': '',\n",
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': '',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'Distance': 4623.972328074718,\n",
       " 'LocalAuthorityCode': '511',\n",
       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
@@ -267,7 +267,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66be80c60f635705e479d4a9'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n",
       "{'AddressLine1': 'Penang Flavours',\n",
       " 'AddressLine2': '146A Plumstead Rd',\n",
@@ -287,7 +287,27 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66be814d706c7abb07729a0c'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n",
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66be8978706c7abb07729a0d'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n",
       "{'AddressLine1': 'Penang Flavours',\n",
       " 'AddressLine2': '146A Plumstead Rd',\n",
@@ -306,7 +326,27 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('66be8978706c7abb07729a0d'),\n",
+      " '_id': ObjectId('66c51dc22aa686eb645529ab'),\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n",
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+      " 'LocalAuthorityName': 'Greenwich',\n",
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66c51e5a2aa686eb645529ad'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -330,19 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('66bda44d3cbb4e722d2b2004'),\n",
+       "{'_id': ObjectId('66bda44d3cbb4e722d2b22e9'),\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -374,7 +414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)\n"
+      "UpdateResult({'n': 1, 'nModified': 0, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)\n"
      ]
     }
    ],
@@ -393,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -419,7 +459,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('66be80c60f635705e479d4a9'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -443,17 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 57,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "994"
+       "0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
@@ -475,7 +515,7 @@
        "DeleteResult({'n': 0, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -506,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -535,7 +575,7 @@
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
        " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '1.195625', 'latitude': '51.083812'},\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4591.765489457773,\n",
        " 'NewRatingPending': False,\n",
@@ -551,7 +591,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,17 +621,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 38788, 'nModified': 38788, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38789, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +664,7 @@
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 4138, 'nModified': 4138, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 0, 'nModified': 0, 'ok': 1.0, 'updatedExisting': False}, acknowledged=True)"
       ]
      },
      "execution_count": 19,
@@ -640,23 +680,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38790, 'nModified': 34699, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [ { '$set': { \"RatingValue\": {'$toInt':\"$RatingValue\"},\n",
+    "                                           }\n",
+    "                                 } ] )                 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'RatingValue': 5,\n",
+      " '_id': ObjectId('66bda44d3cbb4e722d2b22e9'),\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "\n",
+    "query = {'RatingValue': {'$gte': 1}}\n",
+    "\n",
+    "# Specify the fields to include in the result\n",
+    "fields = {\"geocode\": 1, \"RatingValue\": 1}\n",
+    "result = establishments.find_one(query, fields)\n",
+    "\n",
+    "# Print the result\n",
+    "pprint(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7417047-3d56-4f1a-8215-bed60c955b8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
